- lib: Allow specifying property callbacks individually in `CallbackManager`.
- lib: Add `SetPurchaseOrder` sprite generator.
- lib: Rename `POWERED_WAGONS` callback to `VISUAL_EFFECT_AND_POWERED`.
- lib: Allow to use `StringRef` as a livery name.
- lib: Add `_set_articulated_part_callbacks` method to `Train`.
- lib: Use assigned id for the first part when auto-articulating.

- vox: Fix vox house example.
- vox: Experimental .vox renderer for trains.

---------
0.2.1
---------

- Fix: Add articulated callback to purchase chain as well.
- Fix: Don't write data for same real sprite object multiple times.
- Fix incorrect encoding of empty sprite.
- Fix duplicating actions that were added to grf manually.
- Fix `Label` value validation.
- Fix error in action generator for vehicle name.
- Fix compilation for `railtype_table`, `lang_genders` and `lang_cases` global vars.
- Fix vox house example.

- Allow specifying fallbacks in the railtype table.
- Add a `crop` parameter to sprites (`True` by default).
- Support new `variant_group` and `extra_flag` Action 0 vehicle properties.
- Add encoder for `advanced_layout` action 0 station property.
- Return railtype ids in `NewGRF.set_railtype_table`.
- Add functions to manage railtype tables to `NewGRF` class (`set_railtype_table` and `get_railtype_id`).
- Add `get_cargo_id` method to `NewGRF` class.
- Allow to use nml-like comparison operators in the `Switch` code.
- Allow to pass code to `Switch` as a list of lines.
- Add `DEFAULT_CARGO_FIRST_REFITTABLE` constant.
- Allow passing bytes value to actions 7, 9 and D.
- Check that articulated part id doesn't exceed the max value (0x4000).
- Allow to omit sprite width and height when they can be auto-detected.
- Add support for Action B (`ErrorMessage`).
- Add `id` property to the `Define` class.
- Rename `Action0` properties for `OBJECT` feature to match NML names.